Add note about using Kibana's role management APIs for Kibana Privileges

--- a/x-pack/docs/en/security/authorization/managing-roles.asciidoc
+++ b/x-pack/docs/en/security/authorization/managing-roles.asciidoc
@@ -130,7 +130,10 @@ manage roles, log in to {kib} and go to *Management / Elasticsearch / Roles*.
 The _Role Management APIs_ enable you to add, update, remove and retrieve roles
 dynamically. When you use the APIs to manage roles in the `native` realm, the
 roles are stored in an internal {es} index. For more information and examples, 
-see {ref}/security-api-roles.html[Role Management APIs]. 
+see {ref}/security-api-roles.html[Role Management APIs].
+
+To manage roles which grant {kibana-ref}/kibana-privileges.html[Kibana privileges],
+use the {kibana-ref}/role-management-api.html[Kibana Role Management APIs]
 
 [float]
 [[roles-management-file]]
